# FingerVeinRecognition

./: .gitignore  Finger-vein-docs.odt  LICENSE  opencv_test.cpp
FingerVeinFeatureExtractor/: Bootstrap.cpp  CMakeLists.txt  CentersFinder.cpp  Common.h  CurvatureCalculator.cpp  DisplayHelpers.cpp  RegionExtractor.cpp  VeinsBuilder.cpp  main.cpp
matlab-impl/: license.txt  miura_match.m  miura_max_curvature.m  miura_repeated_line_tracking.m  miura_usage.m
